# t113-x-tina-platform

./: .gitattributes  README.md
allwinner/common/libawion/src/: Makefile  ion_alloc.c  ion_alloc.h  ion_alloc_5_15.c  ion_alloc_5_4.c
allwinner/display/libuapi/src/: ion_alloc.c  ion_alloc_5.4.h  sunxi_display_v1.h  videoOutPort.c  yuv_rotate.c
allwinner/display/pqd/: .gitignore  Android.bp  CMakeLists.txt  Makefile  init.pqd.rc  pq_config.mk  pqal.h  pqdaemon.c
allwinner/display/pqd/hardwares/: driver_api.h  hardwares.c
allwinner/display/pqd/hardwares/de20x/fcm/: fcm.c  gen.c  test.c
allwinner/display/pqd/pq/: Readme.txt  build.sh  pq_core.c
allwinner/display/pqd/pq/hardwares/: hardwares.c  sunxi_display2.h
allwinner/display/pqd/pq/hardwares/de20x/: de20x.c  de20x.h
allwinner/display/pqd/pq/hardwares/de20x/fcm/: config.h  constants.c
allwinner/display/pqd/pq/hardwares/de35x/: de35x.c  de35x.h
allwinner/display/pqd/pq/pqdata/: config.h  pq.h  pqdata.c
allwinner/display/pqd/pq/sockets/: socket.c
allwinner/display/pqd/pq/utils/: debug.h
allwinner/display/pqd/sockets/: protocol.h
allwinner/display/pqd/utils/: debug.c  helper.h
allwinner/multimedia/libcedarc/: Makefile.am  Makefile.inc  configure.ac  readMe.txt
allwinner/multimedia/libcedarc/base/: CdcIonUtil.c  CdcLog.c  CdcMalloc.c  CdcMessageQueue.c
allwinner/multimedia/libcedarc/include/: sc_interface.h  vbasetype.h  vdecoder.h  vencoder.h
allwinner/multimedia/libcedarc/vdecoder/: vdecoder.c
allwinner/multimedia/libcedarc/vencoder/: vencoder.c
allwinner/multimedia/libcedarse/adjust/: Makefile  sfx_parm_adjust.c
allwinner/multimedia/libcedarse/config/: Makefile
allwinner/multimedia/libcedarse/demo/: Makefile  sfx_mgmt_demo.c
allwinner/multimedia/libcedarse/include/: sfx_list.h  sfx_log.h  sfx_mgmt.h  sfx_plugin.h
allwinner/multimedia/libcedarse/lib/: Makefile
allwinner/multimedia/libcedarx/: configure.ac
allwinner/multimedia/libcedarx/awrecorder/: EncDataComponent.c  VideoEncodeComponent.c  awencoder.h
allwinner/multimedia/libcedarx/conf/: a527_cedarx.conf  t113_cedarx.conf
allwinner/multimedia/libcedarx/config/: cedarx_config.go
allwinner/multimedia/libcedarx/demo/: Makefile.am
allwinner/multimedia/libcedarx/demo/demoOmxVdec/: Makefile.am  demoOmxVdec.cpp
allwinner/multimedia/libcedarx/demo/demoOmxVenc/: Makefile.am  OmxCodec.cpp  demoOmxVenc.cpp
allwinner/multimedia/libcedarx/demo/demoVdecoder/: demoVdecoder.c
allwinner/multimedia/libcedarx/demo/jpegdemo/: jpegdemo.c
allwinner/multimedia/libcedarx/demo/xplayerdemo/: CdxIon.c  CdxIon.h  asound.conf  layerControl_de.c  layerControl_null.c  readme.txt  sunxi_display2.h  tinasoundcontrol.c  xplayerdemo.c
allwinner/multimedia/libcedarx/libcore/parser/: Makefile.am
allwinner/multimedia/libcedarx/libcore/parser/AwRawStream/: AwRawStreamParser.c  AwRawStreamParser.h
allwinner/multimedia/libcedarx/libcore/parser/aac/: CdxAacParser.c
allwinner/multimedia/libcedarx/libcore/parser/amr/: CdxAmrParser.c
allwinner/multimedia/libcedarx/libcore/parser/ape/: CdxApeParser.c
allwinner/multimedia/libcedarx/libcore/parser/asf/: AsfParser.c  AsfParserItf.c
allwinner/multimedia/libcedarx/libcore/parser/atrac/: CdxAtracParser.c
allwinner/multimedia/libcedarx/libcore/parser/avi/: CdxAviDepack.c  CdxAviIdx1.c
allwinner/multimedia/libcedarx/libcore/parser/base/: Android.bp_s  CdxParser.c  Makefile.am  VideoSpecificData.c
allwinner/multimedia/libcedarx/libcore/parser/base/id3base/: CdxUtfCode.c  Id3Base.c
allwinner/multimedia/libcedarx/libcore/parser/dsd/: CdxDsdParser.c
allwinner/multimedia/libcedarx/libcore/parser/flac/: CdxFlacParser.c  CdxFlacParser.h
allwinner/multimedia/libcedarx/libcore/parser/hls/: CdxHlsParser.c  M3UParser.c
allwinner/multimedia/libcedarx/libcore/parser/id3v2/: CdxId3v2Parser.c
allwinner/multimedia/libcedarx/libcore/parser/mkv/: CdxMkvParserImpl.c
allwinner/multimedia/libcedarx/libcore/parser/mms/: Makefile.am
allwinner/multimedia/libcedarx/libcore/parser/mmshttp/: Makefile.am
allwinner/multimedia/libcedarx/libcore/parser/mov/: CdxMovAtom.c  CdxMovList.c  CdxMovParser.c  CdxMovParser.h  CdxMovParserImpl.c  CdxMovSample.c  mpeg4Vol.c
allwinner/multimedia/libcedarx/libcore/parser/mp3/: CdxMp3Parser.c  CdxMp3Parser.h
allwinner/multimedia/libcedarx/libcore/parser/mpg/: dvdTitleIfo.c  mpgRead.c
allwinner/multimedia/libcedarx/libcore/parser/ogg/: CdxOggParser.c
allwinner/multimedia/libcedarx/libcore/parser/pmp/: Makefile.am
allwinner/multimedia/libcedarx/libcore/parser/ts/: CdxTsParser.c  MediaProbe.c
allwinner/multimedia/libcedarx/libcore/parser/wav/: CdxWavParser.c  CdxWavParser.h
allwinner/multimedia/libcedarx/libcore/stream/base/: Android.bp_s  CdxStream.c  Makefile.am
allwinner/multimedia/libcedarx/libcore/stream/mms/: CdxMmsHttpStream.c  CdxMmsStream.h  CdxMmshStream.c  CdxMmstStream.c  Makefile.am
allwinner/multimedia/libcedarx/libcore/stream/rtmp/: Makefile.am
allwinner/multimedia/libcedarx/xmetadataretriever/: xmetadataretriever.c
allwinner/multimedia/libcedarx/xplayer/: Makefile.am  demuxComponent.c  demuxComponent.h  xplayer.c
allwinner/multimedia/libtmedia/jpegdecode/: Makefile  jpegdecode.c
allwinner/multimedia/libtmedia/mpp_libcedarc/: Makefile.inc  tina.mk
allwinner/multimedia/libtmedia/tmetadataretriever/: Makefile
allwinner/multimedia/libtmedia/tplayer/: Makefile  auGaincom.h  surround.h  tplayer.c  tplayer.h
allwinner/multimedia/libtmedia/trecorder/: Makefile  RecorderWriter.c  TParseConfig.h  TRcommon.c  TinaRecorder.c  TinaRecorder.h  Trecorder.c  Video_input_port.c  Video_input_port.h  audioInPort.c  audioInPort.h  dataqueue.c  dataqueue.h  pcm_multi.c  videoDecorder.c  videoDecorder.h  videodev.h
allwinner/power/healthd/libbatinfo/: batinfo.c
allwinner/power/healthd/src/: BatteryMonitor.cpp  healthd.cpp  healthd_mode_charger.cpp  healthd_mode_charger_without_animation.cpp  healthd_mode_tina.cpp
allwinner/usb/setusbconfig/: setusbconfig
allwinner/utils/mtop/: readme.txt
allwinner/wireless/wifimanager/: Version.txt
(+264 files in other folders)
