
SUBDIRS = libion

if MUXER_TEST_ENABLE
SUBDIRS += muxtest
endif

if PARSER_DEMO_ENABLE
SUBDIRS += parserdemo
endif

if VDEC_DEMO_ENABLE
SUBDIRS += demoVdecoder
endif

if VENC_DEMO_ENABLE
SUBDIRS += demoVencVdec
endif

if JPEG_DEMO_ENABLE
SUBDIRS += jpegdemo
endif

if XMETA_DEMO_ENABLE
SUBDIRS += xmetademo
endif

if RECODER_DEMO_ENABLE
SUBDIRS += recoderdemo
endif

if XPLAYER_DEMO_ENABLE
SUBDIRS += xplayerdemo
endif

if OMX_DEMO_ENABLE
SUBDIRS + = demoOmxVdec demoOmxVenc
endif

#not enable omx in linux default
