SUBDIRS =

if TS_PARSER_ENABLE
SUBDIRS += ts
endif

if MKV_PARSER_ENABLE
SUBDIRS += mkv
endif

if MOV_PARSER_ENABLE
SUBDIRS += mov
endif

if AVI_PARSER_ENABLE
SUBDIRS += avi
endif

if FLV_PARSER_ENABLE
SUBDIRS += flv
endif

if ASF_PARSER_ENABLE
SUBDIRS += asf
endif

if HLS_PARSER_ENABLE
SUBDIRS += hls
endif

if REMUX_PARSER_ENABLE
SUBDIRS += remux
endif

if OGG_PARSER_ENABLE
SUBDIRS += ogg
endif

if MPG_PARSER_ENABLE
SUBDIRS += mpg
endif

if PMP_PARSER_ENABLE
SUBDIRS += pmp
endif

if CAF_PARSER_ENABLE
SUBDIRS += caf
endif

if AAC_PARSER_ENABLE
SUBDIRS += aac
endif

if MP3_PARSER_ENABLE
SUBDIRS += mp3
endif

if ID3V2_PARSER_ENABLE
SUBDIRS += id3v2
endif

if APE_PARSER_ENABLE
SUBDIRS += ape
endif

if AMR_PARSER_ENABLE
SUBDIRS += amr
endif

if ATRAC_PARSER_ENABLE
SUBDIRS += atrac
endif

if WAV_PARSER_ENABLE
SUBDIRS += wav
endif

if FLAC_PARSER_ENABLE
SUBDIRS += flac
endif

if PLS_PARSER_ENABLE
SUBDIRS += pls
endif

if G729_PARSER_ENABLE
SUBDIRS += g729
endif

if HLS_PARSER_ENABLE
SUBDIRS += hls
endif

if MMF_PARSER_ENABLE
SUBDIRS += mmf
endif

if DSD_PARSER_ENABLE
SUBDIRS += dsd
endif

if WV_PARSER_ENABLE
SUBDIRS += wv
endif

if MMS_PARSER_ENABLE
SUBDIRS += mmshttp
SUBDIRS += mms
endif

SUBDIRS += AwRawStream base